--- a/index.html
+++ b/index.html
@@ -2,11 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta https-equiv="X-UA_Compatible" content="IE-edge">
-    <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    <title>Evan Shiber</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Evan Shiber - Cyber Security Engineer</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    Cyber Security Engineer
+    <header>
+        <h1>Evan Shiber</h1>
+        <p>Cyber Security Engineer</p>
+    </header>
+    <main>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Passionate about cybersecurity and protecting systems from threats. Experienced in various cybersecurity practices and eager to contribute to innovative projects.</p>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li><a href="projects/project1.html">Project 1</a></li>
+                <li><a href="projects/project2.html">Project 2</a></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Evan Shiber</p>
+    </footer>
+    <script src="scripts.js"></script>
 </body>
 </html>
