--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <p>Cyber Security Engineer</p>
     </header>
     <main>
+        <!-- Add your image here with a relative path -->
+        <img src="images/SelfPicutre.jpg" alt="A description of the image" class="header-image">
+        
         <section id="about">
             <h2>About Me</h2>
             <p>Passionate about cybersecurity and protecting systems from threats. Experienced in various cybersecurity practices and eager to contribute to innovative projects.</p>
