--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </header>
     <main>
         <!-- Add your image here with a relative path -->
-        <img src="images/SelfPicutre.jpg" alt="A description of the image" class="header-image">
+        <img src="images/SelfPicture.jpg" alt="A description of the image" class="header-image">
         
         <section id="about">
             <h2>About Me</h2>
