--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <p><strong>ICS Advanced Technologies</strong> - Ames, IA<br>June 2024 -- Sep. 2024</p>
                 <ul>
                     <li>Network Engineering duties HERE, etc.</li>
+                    <li>DNS, routing table, DPSK config, etc.</li>
                     <li>Network/Internet Troubleshooting, Network Hardware Configuration (Router, Switch, AP)</li>
                     <li>VLAN Configuration, DHCP Implementation/Configuration/Management</li>
                 </ul>
