--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 
         <section id="resume">
             <h2>Resume</h2>
-
             <!-- Education Section -->
             <h3>Education</h3>
             <p><strong>Iowa State University</strong> - Ames, IA<br>Bachelor of Science in Cyber Security Engineering<br>Aug. 2021 -- May 2025</p>
@@ -30,8 +29,7 @@
             <!-- Experience Section -->
             <h3>Experience</h3>
             <div class="experience-item">
-                <h4>IT Operations Support Specialist</h4>
-                <p><strong>ICS Advanced Technologies</strong> - Ames, IA<br>June 2024 -- Sep. 2024</p>
+                <h4>IT Operations Support Specialist</h4><p><strong>ICS Advanced Technologies</strong> - Ames, IA<br>June 2024 -- Sep. 2024</p>
                 <ul>
                     <li>Network Engineering duties HERE, etc.</li>
                     <li>DNS, routing table, DPSK config, etc.</li>
@@ -40,24 +38,21 @@
                 </ul>
             </div>
             <div class="experience-item">
-                <h4>Host</h4>
-                <p><strong>Northvale Classic Diner</strong> - Northvale, NJ<br>May 2023 -- Aug. 2023</p>
+                <h4>Host</h4><p><strong>Northvale Classic Diner</strong> - Northvale, NJ<br>May 2023 -- Aug. 2023</p>
                 <ul>
                     <li>Managed reservations and optimized table allocation to reduce wait times by 15 to 25 minutes during peak hours</li>
                     <li>Led kitchen staff to ensure proper and timely food preparation, enhancing overall customer satisfaction</li>
                 </ul>
             </div>
             <div class="experience-item">
-                <h4>Sales Associate</h4>
-                <p><strong>Dunkin'</strong> - Norwood, NJ<br>Sep. 2019 -- Aug. 2022</p>
+                <h4>Sales Associate</h4><p><strong>Dunkin'</strong> - Norwood, NJ<br>Sep. 2019 -- Aug. 2022</p>
                 <ul>
                     <li>Processed over 200 transactions daily and exceeded operational efficiency standards by up to 20%</li>
                     <li>Stocked products and rolled out marketing campaigns, resulting in a 5% daily revenue increase</li>
                 </ul>
             </div>
             <div class="experience-item">
-                <h4>Volunteer</h4>
-                <p><strong>Montclair Animal Shelter</strong> - Montclair, NJ<br>Jan. 2017 -- Aug. 2021</p>
+                <h4>Volunteer</h4><p><strong>Montclair Animal Shelter</strong> - Montclair, NJ<br>Jan. 2017 -- Aug. 2021</p>
                 <ul>
                     <li>Provided care for orphaned animals, resulting in the successful rehoming of over 100 animals</li>
                     <li>Assisted in paperwork and data management during the adoption process, leading to 30% increased adoption rates</li>
@@ -67,8 +62,7 @@
             <!-- Projects Section -->
             <h3>Projects</h3>
             <div class="project-item">
-                <h4>Student Schedule Android App</h4>
-                <p><strong>Technologies:</strong> Java, Git, CI/CD, Postman, PAM<br>Aug. 2023 -- Dec. 2023</p>
+                <h4>Student Schedule Android App</h4><p><strong>Technologies:</strong> Java, Git, CI/CD, Postman, PAM<br>Aug. 2023 -- Dec. 2023</p>
                 <ul>
                     <li>Students can see course descriptions, register for courses, and leave reviews/ratings for taken courses/professors</li>
                     <li>Employed WebSocket for real-time chat between students and advisors, along with advisors and administrators</li>
@@ -76,8 +70,7 @@
                 </ul>
             </div>
             <div class="project-item">
-                <h4>Digital Logic Circuit</h4>
-                <p><strong>Technologies:</strong> Verilog HDL, Quartus Prime<br>Jan. 2023 -- May 2023</p>
+                <h4>Digital Logic Circuit</h4><p><strong>Technologies:</strong> Verilog HDL, Quartus Prime<br>Jan. 2023 -- May 2023</p>
                 <ul>
                     <li>Produced a complete digital logic circuit using Quartus Prime software and Verilog HDL</li>
                     <li>Created and employed a Finite State Machine (FSM), a 16-bit binary counter, a register file, a ripple-carry adder, multiple seven-segment displays, and user-controlled inputs on an Altera DE2-115 Cyclone IV FPGA</li>
@@ -87,39 +80,34 @@
             <!-- Activities Section -->
             <h3>Activities</h3>
             <div class="activity-item">
-                <h4>Hack The Box (CTF)</h4>
-                <p>Jan. 2024 -- Present</p>
+                <h4>Hack The Box (CTF)</h4><p>Jan. 2024 -- Present</p>
                 <ul>
                     <li>Engage in Capture The Flag (CTF) competitions, navigating through challenges to collect flags in boxes</li>
                 </ul>
             </div>
             <div class="activity-item">
-                <h4>Cyber Defense Competitions (CDC)</h4>
-                <p>Sep. 2023 -- Present</p>
+                <h4>Cyber Defense Competitions (CDC)</h4><p>Sep. 2023 -- Present</p>
                 <ul>
                     <li>Blue Team participant, contributing to the setup and defense of networks prior to competition commencement</li>
                     <li>Analyze network traffic to detect anomalies, mitigating potential vulnerabilities across competition scenarios</li>
                 </ul>
             </div>
             <div class="activity-item">
-                <h4>Hackathon Club (HACK)</h4>
-                <p>Jan. 2023 -- Present</p>
+                <h4>Hackathon Club (HACK)</h4><p>Jan. 2023 -- Present</p>
                 <ul>
                     <li>Facilitate meetings before Hackathon events at Iowa State and surrounding Universities</li>
                     <li>Relay upcoming Hackathon details, organize event transportation, and host additional workshops and events</li>
                 </ul>
             </div>
             <div class="activity-item">
-                <h4>Computer Science and Software Engineering Club (CSE)</h4>
-                <p>Jan. 2023 -- Present</p>
+                <h4>Computer Science and Software Engineering Club (CSE)</h4><p>Jan. 2023 -- Present</p>
                 <ul>
                     <li>Attend social events such as presentations from industry professionals, students, and faculty</li>
                     <li>Solve programming challenges and present solutions to faculty and peers</li>
                 </ul>
             </div>
             <div class="activity-item">
-                <h4>Hacking and Cyber Security Club (HACC)</h4>
-                <p>May 2022 -- Present</p>
+                <h4>Hacking and Cyber Security Club (HACC)</h4><p>May 2022 -- Present</p>
                 <ul>
                     <li>Gain experience with industry practices such as firewalls, secure coding, network design, and social engineering</li>
                     <li>Weekly meetings include presentations, demonstrations, and labs presented by officers, club members, and guest speakers such as industry professionals</li>
