--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <section id="about">
             <h2>About Me</h2>
-            <p>Passionate about cybersecurity and protecting systems from threats. Experienced in various cybersecurity practices and eager to contribute to innovative projects.</p>
+            <p>Cybersecurity studet passionate about protecting systems from threats.</p>
         </section>
 
         <hr> <!-- Horizontal line separating sections -->
