--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <h4>Hack The Box (CTF)</h4>
                 <p>Jan. 2024 -- Present</p>
                 <ul>
-                    <li>Engage in Capture The Flag (CTF) competitions, navigating through challenges to collect flags in boxes</li>
+                    <li>Engage in Capture The Flag (CTF) competitions, performing various offensive (Red Team) penetration testing techniques.</li>
                 </ul>
             </div>
 
