--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
     <main>
         <img src="images/SelfPicture.jpg" alt="A description of the image" class="header-image">
 
+        <!-- Contact Section -->
+        <section id="contact">
+            <h2>Contact Information</h2>
+            <p><strong>Email:</strong> evanshiber@example.com</p>
+            <p><strong>Phone:</strong> (555) 123-4567</p>
+            <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/evanshiber" target="_blank">linkedin.com/in/evanshiber</a></p>
+            <p><strong>Location:</strong> Ames, IA</p>
+        </section>
+
         <section id="about">
             <h2>About Me</h2>
             <p>Cybersecurity studet passionate about protecting systems from threats.</p>
