--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 
         <!-- Contact Section -->
         <section id="contact">
-            <h2>Contact Information</h2>
-            <p><strong>Email:</strong> evanshiber@example.com</p>
-            <p><strong>Phone:</strong> (555) 123-4567</p>
-            <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/evanshiber" target="_blank">linkedin.com/in/evanshiber</a></p>
-            <p><strong>Location:</strong> Ames, IA</p>
+            <h2>Contact</h2>
+            <p><strong>Email:</strong> shiberevan@gmail.com</p>
+            <p><strong>Phone:</strong> (201) 937-5702</p>
+            <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/evan-shiber" target="_blank">linkedin.com/in/evan-shiber</a></p>
         </section>
 
         <section id="about">
