--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
     <main>
         <img src="images/SelfPicture.jpg" alt="A description of the image" class="header-image">
 
-        <!-- Contact Section -->
+       <!-- Contact Section -->
         <section id="contact">
             <h2>Contact</h2>
-            <p><strong>Email:</strong> shiberevan@gmail.com</p>
+            <p><strong>Email:</strong> <a href="mailto:shiberevan@gmail.com">shiberevan@gmail.com</a></p>
             <p><strong>Phone:</strong> (201) 937-5702</p>
             <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/evan-shiber" target="_blank">linkedin.com/in/evan-shiber</a></p>
         </section>
+
 
         <section id="about">
             <h2>About Me</h2>
