--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             <h2>Resume</h2>
             <hr> <!-- Horizontal line separating sections -->
             <h3>Education</h3>
-            <p><strong>Iowa State University</strong> - Ames, IA<br>Bachelor of Science in Cyber Security Engineering<br>Aug. 2021 -- May 2025</p>
+            <p><strong>Iowa State University</strong> - Ames, IA<br>
+                <em>Bachelor of Science in Cyber Security Engineering</em><br>
+                Aug. 2021 -- May 2025</p>
 
             <hr> <!-- Horizontal line separating sections -->
 
@@ -78,7 +80,7 @@
                     <li>Assisted in paperwork and data management during the adoption process, leading to 30% increased adoption rates</li>
                 </ul>
             </div>
-            
+
             <hr>
 
             <h3>Projects</h3>
