--- a/index.html
+++ b/index.html
@@ -1,47 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evan Shiber - Cyber Security Engineer</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <h1>Evan Shiber</h1>
         <p>Cyber Security Engineer</p>
     </header>
+
     <main>
         <img src="images/SelfPicture.jpg" alt="A description of the image" class="header-image">
 
-       <!-- Contact Section -->
+        <!-- Contact Section -->
         <section id="contact">
             <h2>Contact</h2>
             <p><strong>Email:</strong> <a href="mailto:shiberevan@gmail.com">shiberevan@gmail.com</a></p>
-            <p><strong>Phone:</strong> (201) 937-5702</p>
+            <p><strong>Phone:</strong> <a href="tel:+12019375702">(201) 937-5702</a></p>
             <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/evan-shiber" target="_blank">linkedin.com/in/evan-shiber</a></p>
         </section>
 
-
         <section id="about">
             <h2>About Me</h2>
-            <p>Cybersecurity studet passionate about protecting systems from threats.</p>
+            <p>Cybersecurity student passionate about protecting systems from threats.</p>
         </section>
 
         <hr> <!-- Horizontal line separating sections -->
 
         <section id="resume">
-
             <h2>Resume</h2>
-            <hr> <!-- Horizontal line separating sections -->
+            <hr>
+            <!-- Education Section -->
             <h3>Education</h3>
             <p><strong>Iowa State University</strong> - Ames, IA<br>
                 <em>Bachelor of Science in Cyber Security Engineering</em><br>
-                Aug. 2021 -- May 2025</p>
+                Aug. 2021 -- May 2025
+            </p>
+            <hr>
 
-            <hr> <!-- Horizontal line separating sections -->
-
+            <!-- Experience Section -->
             <h3>Experience</h3>
             <div class="experience-item">
                 <h4>IT Operations Support Specialist</h4>
@@ -83,6 +88,7 @@
 
             <hr>
 
+            <!-- Projects Section -->
             <h3>Projects</h3>
             <div class="project-item">
                 <h4>Student Schedule Android App</h4>
@@ -158,9 +164,12 @@
             <p><strong>Other:</strong> SIEM, MITRE ATT&CK, Cryptography, AI Prompting</p>
         </section>
     </main>
+
     <footer>
         <p>&copy; 2024 Evan Shiber</p>
     </footer>
+
     <script src="scripts.js"></script>
 </body>
+
 </html>
