--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Evan Shiber - Cyber Security Engineer</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <h1>Evan Shiber</h1>
@@ -15,7 +17,7 @@
     <main>
         <img src="images/SelfPicture.jpg" alt="A description of the image" class="header-image">
 
-       <!-- Contact Section -->
+        <!-- Contact Section -->
         <section id="contact">
             <h2>Contact</h2>
             <p><strong>Email:</strong> <a href="mailto:shiberevan@gmail.com">shiberevan@gmail.com</a></p>
@@ -23,26 +25,23 @@
             <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/evan-shiber" target="_blank">linkedin.com/in/evan-shiber</a></p>
         </section>
 
-
+        <!-- About Section -->
         <section id="about">
             <h2>About Me</h2>
-            <p>Cybersecurity studet passionate about protecting systems from threats.</p>
+            <p>Cybersecurity student passionate about protecting systems from threats.</p>
         </section>
 
-        <hr> <!-- Horizontal line separating sections -->
-
-        <section id="resume">
-
-            <h2>Resume</h2>
-            <hr> <!-- Horizontal line separating sections -->
-            <h3>Education</h3>
+        <!-- Education Section -->
+        <section id="education">
+            <h2>Education</h2>
             <p><strong>Iowa State University</strong> - Ames, IA<br>
                 <em>Bachelor of Science in Cyber Security Engineering</em><br>
                 Aug. 2021 -- May 2025</p>
+        </section>
 
-            <hr> <!-- Horizontal line separating sections -->
-
-            <h3>Experience</h3>
+        <!-- Experience Section -->
+        <section id="experience">
+            <h2>Experience</h2>
             <div class="experience-item">
                 <h4>IT Operations Support Specialist</h4>
                 <p><strong>ICS Advanced Technologies</strong> - Ames, IA<br>June 2024 -- Sep. 2024</p>
@@ -80,10 +79,11 @@
                     <li>Assisted in paperwork and data management during the adoption process, leading to 30% increased adoption rates</li>
                 </ul>
             </div>
+        </section>
 
-            <hr>
-
-            <h3>Projects</h3>
+        <!-- Projects Section -->
+        <section id="projects">
+            <h2>Projects</h2>
             <div class="project-item">
                 <h4>Student Schedule Android App</h4>
                 <p><strong>Technologies:</strong> Java, Git, CI/CD, Postman, PAM<br>Aug. 2023 -- Dec. 2023</p>
@@ -102,10 +102,11 @@
                     <li>Created and employed a Finite State Machine (FSM), a 16-bit binary counter, a register file, a ripple-carry adder, multiple seven-segment displays, and user-controlled inputs on an Altera DE2-115 Cyclone IV FPGA</li>
                 </ul>
             </div>
+        </section>
 
-            <hr>
-
-            <h3>Activities</h3>
+        <!-- Activities Section -->
+        <section id="activities">
+            <h2>Activities</h2>
             <div class="activity-item">
                 <h4>Hack The Box (CTF)</h4>
                 <p>Jan. 2024 -- Present</p>
@@ -149,15 +150,17 @@
                     <li>Weekly meetings include presentations, demonstrations, and labs presented by officers, club members, and guest speakers such as industry professionals</li>
                 </ul>
             </div>
+        </section>
 
-            <hr>
-
-            <h3>Technical Skills</h3>
+        <!-- Technical Skills Section -->
+        <section id="skills">
+            <h2>Technical Skills</h2>
             <p><strong>Tools:</strong> Penetration Testing, Network Security, Kali Linux, Wireshark, Splunk, Nmap, Nessus, pfSense, IDS/IPS</p>
             <p><strong>Software:</strong> Java, Python, C/C++, SQL, MIPS Assembly, Git, Postman API, CI/CD, VS Code, Quartus Prime, Eclipse</p>
             <p><strong>Other:</strong> SIEM, MITRE ATT&CK, Cryptography, AI Prompting</p>
         </section>
     </main>
+
     <footer>
         <p>&copy; 2024 Evan Shiber</p>
     </footer>
