--- a/index.html
+++ b/index.html
@@ -15,34 +15,31 @@
     <main>
         <img src="images/SelfPicture.jpg" alt="A description of the image" class="header-image">
 
-       <!-- Contact Section -->
-        <section id="contact">
+        <!-- Contact Section -->
+        <section id="contact" class="bubble-section">
             <h2>Contact</h2>
             <p><strong>Email:</strong> <a href="mailto:shiberevan@gmail.com">shiberevan@gmail.com</a></p>
             <p><strong>Phone:</strong> (201) 937-5702</p>
             <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/evan-shiber" target="_blank">linkedin.com/in/evan-shiber</a></p>
         </section>
 
-
-        <section id="about">
+        <!-- About Section -->
+        <section id="about" class="bubble-section">
             <h2>About Me</h2>
-            <p>Cybersecurity studet passionate about protecting systems from threats.</p>
+            <p>Cybersecurity student passionate about protecting systems from threats.</p>
         </section>
 
-        <hr> <!-- Horizontal line separating sections -->
-
-        <section id="resume">
-
-            <h2>Resume</h2>
-            <hr> <!-- Horizontal line separating sections -->
-            <h3>Education</h3>
+        <!-- Education Section -->
+        <section id="education" class="bubble-section">
+            <h2>Education</h2>
             <p><strong>Iowa State University</strong> - Ames, IA<br>
                 <em>Bachelor of Science in Cyber Security Engineering</em><br>
                 Aug. 2021 -- May 2025</p>
+        </section>
 
-            <hr> <!-- Horizontal line separating sections -->
-
-            <h3>Experience</h3>
+        <!-- Experience Section -->
+        <section id="experience" class="bubble-section">
+            <h2>Experience</h2>
             <div class="experience-item">
                 <h4>IT Operations Support Specialist</h4>
                 <p><strong>ICS Advanced Technologies</strong> - Ames, IA<br>June 2024 -- Sep. 2024</p>
@@ -53,7 +50,6 @@
                     <li>VLAN Configuration, DHCP Implementation/Configuration/Management</li>
                 </ul>
             </div>
-
             <div class="experience-item">
                 <h4>Host</h4>
                 <p><strong>Northvale Classic Diner</strong> - Northvale, NJ<br>May 2023 -- Aug. 2023</p>
@@ -62,7 +58,6 @@
                     <li>Led kitchen staff to ensure proper and timely food preparation, enhancing overall customer satisfaction</li>
                 </ul>
             </div>
-
             <div class="experience-item">
                 <h4>Sales Associate</h4>
                 <p><strong>Dunkin'</strong> - Norwood, NJ<br>Sep. 2019 -- Aug. 2022</p>
@@ -71,7 +66,6 @@
                     <li>Stocked products and rolled out marketing campaigns, resulting in a 5% daily revenue increase</li>
                 </ul>
             </div>
-
             <div class="experience-item">
                 <h4>Volunteer</h4>
                 <p><strong>Montclair Animal Shelter</strong> - Montclair, NJ<br>Jan. 2017 -- Aug. 2021</p>
@@ -80,10 +74,11 @@
                     <li>Assisted in paperwork and data management during the adoption process, leading to 30% increased adoption rates</li>
                 </ul>
             </div>
+        </section>
 
-            <hr>
-
-            <h3>Projects</h3>
+        <!-- Projects Section -->
+        <section id="projects" class="bubble-section">
+            <h2>Projects</h2>
             <div class="project-item">
                 <h4>Student Schedule Android App</h4>
                 <p><strong>Technologies:</strong> Java, Git, CI/CD, Postman, PAM<br>Aug. 2023 -- Dec. 2023</p>
@@ -93,7 +88,6 @@
                     <li>Implemented user authentication for Privileged Access Management for Admin, Advisor, and Student user types</li>
                 </ul>
             </div>
-
             <div class="project-item">
                 <h4>Digital Logic Circuit</h4>
                 <p><strong>Technologies:</strong> Verilog HDL, Quartus Prime<br>Jan. 2023 -- May 2023</p>
@@ -102,10 +96,11 @@
                     <li>Created and employed a Finite State Machine (FSM), a 16-bit binary counter, a register file, a ripple-carry adder, multiple seven-segment displays, and user-controlled inputs on an Altera DE2-115 Cyclone IV FPGA</li>
                 </ul>
             </div>
+        </section>
 
-            <hr>
-
-            <h3>Activities</h3>
+        <!-- Activities Section -->
+        <section id="activities" class="bubble-section">
+            <h2>Activities</h2>
             <div class="activity-item">
                 <h4>Hack The Box (CTF)</h4>
                 <p>Jan. 2024 -- Present</p>
@@ -113,7 +108,6 @@
                     <li>Engage in Capture The Flag (CTF) competitions, performing various offensive (Red Team) penetration testing techniques.</li>
                 </ul>
             </div>
-
             <div class="activity-item">
                 <h4>Cyber Defense Competitions (CDC)</h4>
                 <p>Sep. 2023 -- Present</p>
@@ -122,7 +116,6 @@
                     <li>Analyze network traffic to detect anomalies, mitigating potential vulnerabilities across competition scenarios</li>
                 </ul>
             </div>
-
             <div class="activity-item">
                 <h4>Hackathon Club (HACK)</h4>
                 <p>Jan. 2023 -- Present</p>
@@ -131,7 +124,6 @@
                     <li>Relay upcoming Hackathon details, organize event transportation, and host additional workshops and events</li>
                 </ul>
             </div>
-
             <div class="activity-item">
                 <h4>Computer Science and Software Engineering Club (CSE)</h4>
                 <p>Jan. 2023 -- Present</p>
@@ -140,7 +132,6 @@
                     <li>Solve programming challenges and present solutions to faculty and peers</li>
                 </ul>
             </div>
-
             <div class="activity-item">
                 <h4>Hacking and Cyber Security Club (HACC)</h4>
                 <p>May 2022 -- Present</p>
@@ -149,10 +140,11 @@
                     <li>Weekly meetings include presentations, demonstrations, and labs presented by officers, club members, and guest speakers such as industry professionals</li>
                 </ul>
             </div>
+        </section>
 
-            <hr>
-
-            <h3>Technical Skills</h3>
+        <!-- Technical Skills Section -->
+        <section id="skills" class="bubble-section">
+            <h2>Technical Skills</h2>
             <p><strong>Tools:</strong> Penetration Testing, Network Security, Kali Linux, Wireshark, Splunk, Nmap, Nessus, pfSense, IDS/IPS</p>
             <p><strong>Software:</strong> Java, Python, C/C++, SQL, MIPS Assembly, Git, Postman API, CI/CD, VS Code, Quartus Prime, Eclipse</p>
             <p><strong>Other:</strong> SIEM, MITRE ATT&CK, Cryptography, AI Prompting</p>
