--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
         <section id="resume" class="resume-section">
             <h2>Resume</h2>
             
+            <hr class="custom-line"> <!-- Horizontal line -->
+
             <h3>Education</h3>
             <p><strong>Iowa State University</strong> - Ames, IA<br>
                 <em>Bachelor of Science in Cyber Security Engineering</em><br>
                 Aug. 2021 -- May 2025</p>
+            
+            <hr class="custom-line"> <!-- Horizontal line -->
 
             <h3>Experience</h3>
             <div class="experience-item">
@@ -76,6 +80,8 @@
                 </ul>
             </div>
 
+            <hr class="custom-line"> <!-- Horizontal line -->
+
             <h3>Projects</h3>
             <div class="project-item">
                 <h4>Student Schedule Android App</h4>
@@ -95,6 +101,8 @@
                     <li>Created and employed a Finite State Machine (FSM), a 16-bit binary counter, a register file, a ripple-carry adder, multiple seven-segment displays, and user-controlled inputs on an Altera DE2-115 Cyclone IV FPGA</li>
                 </ul>
             </div>
+
+            <hr class="custom-line"> <!-- Horizontal line -->
 
             <h3>Activities</h3>
             <div class="activity-item">
@@ -140,6 +148,8 @@
                     <li>Weekly meetings include presentations, demonstrations, and labs presented by officers, club members, and guest speakers such as industry professionals</li>
                 </ul>
             </div>
+
+            <hr class="custom-line"> <!-- Horizontal line -->
 
             <h3>Technical Skills</h3>
             <p><strong>Tools:</strong> Penetration Testing, Network Security, Kali Linux, Wireshark, Splunk, Nmap, Nessus, pfSense, IDS/IPS</p>
