--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <!-- Contact Section -->
-        <section id="contact" class="resume-section">
+        <section class="contact">
             <h2>Contact</h2>
             <p><strong>Email:</strong> <a href="mailto:shiberevan@gmail.com">shiberevan@gmail.com</a></p>
             <p><strong>Phone:</strong> (201) 937-5702</p>
