--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Evan Shiber - Cyber Security Engineer</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -17,10 +18,23 @@
         <!-- Contact Section -->
         <section class="contact">
             <h2>Contact</h2>
-            <p><strong>Email:</strong> <a href="mailto:shiberevan@gmail.com">shiberevan@gmail.com</a></p>
-            <p><strong>Phone:</strong> (201) 937-5702</p>
-            <p><strong>LinkedIn:</strong> <a href="https://linkedin.com/in/evan-shiber" target="_blank">linkedin.com/in/evan-shiber</a></p>
+            <p>
+                <strong>Email:</strong> 
+                <i class="fa-regular fa-envelope"></i> 
+                <a href="mailto:shiberevan@gmail.com">shiberevan@gmail.com</a>
+            </p>
+            <p>
+                <strong>Phone:</strong> 
+                <i class="fa-solid fa-phone"></i> 
+                (201) 937-5702
+            </p>
+            <p>
+                <strong>LinkedIn:</strong> 
+                <i class="fa-brands fa-linkedin"></i> 
+                <a href="https://linkedin.com/in/evan-shiber" target="_blank">linkedin.com/in/evan-shiber</a>
+            </p>
         </section>
+
 
         <!-- About Section -->
         <section id="about" class="resume-section">
