--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
             </p>
         </section>
 
-
         <!-- About Section -->
         <section id="about" class="resume-section">
             <h2>About Me</h2>
@@ -46,7 +45,7 @@
         <section id="resume" class="resume-section">
             <h2>Resume</h2>
             
-            <hr class="custom-line"> <!-- Horizontal line -->
+            <hr class="resume-line"> <!-- Horizontal line for resume section -->
 
             <h3>Education</h3>
             <p><strong>Iowa State University</strong> - Ames, IA<br>
