--- a/index.html
+++ b/index.html
@@ -10,31 +10,34 @@
 </head>
 <body>
     <header>
-        <h1>Evan Shiber</h1>
-        <p>Cyber Security Engineer</p>
-        <img src="images/SelfPicture.jpg" alt="A description of the image" class="header-image">
+        <div class="header-left">
+            <h1>Evan Shiber</h1>
+            <p>Cyber Security Engineer</p>
+            <img src="images/SelfPicture.jpg" alt="A description of the image" class="header-image">
+        </div>
+        <div class="header-right">
+            <!-- Contact Section -->
+            <section class="contact">
+                <h2>Contact</h2>
+                <p>
+                    <strong>Email:</strong> 
+                    <i class="fa-regular fa-envelope"></i> 
+                    <a href="mailto:shiberevan@gmail.com">shiberevan@gmail.com</a>
+                </p>
+                <p>
+                    <strong>Phone:</strong> 
+                    <i class="fa-solid fa-phone"></i> 
+                    (201) 937-5702
+                </p>
+                <p>
+                    <strong>LinkedIn:</strong> 
+                    <i class="fa-brands fa-linkedin"></i> 
+                    <a href="https://linkedin.com/in/evan-shiber" target="_blank">linkedin.com/in/evan-shiber</a>
+                </p>
+            </section>
+        </div>
     </header>
     <main>
-        <!-- Contact Section -->
-        <section class="contact">
-            <h2>Contact</h2>
-            <p>
-                <strong>Email:</strong> 
-                <i class="fa-regular fa-envelope"></i> 
-                <a href="mailto:shiberevan@gmail.com">shiberevan@gmail.com</a>
-            </p>
-            <p>
-                <strong>Phone:</strong> 
-                <i class="fa-solid fa-phone"></i> 
-                (201) 937-5702
-            </p>
-            <p>
-                <strong>LinkedIn:</strong> 
-                <i class="fa-brands fa-linkedin"></i> 
-                <a href="https://linkedin.com/in/evan-shiber" target="_blank">linkedin.com/in/evan-shiber</a>
-            </p>
-        </section>
-
         <!-- About Section -->
         <section id="about" class="resume-section">
             <h2>About Me</h2>
@@ -173,6 +176,6 @@
     <footer>
         <p>&copy; 2024 Evan Shiber</p>
     </footer>
-    <script src="scripts.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
