--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
         <img src="images/SelfPicture.jpg" alt="A description of the image" class="header-image">
     </header>
     <main>
+        <!-- Blinking Cursor Section -->
+        <section class="hero--section">
+            <h1 class="hero--section--title">
+                <span></span>
+                <span class="typed-cursor typed-cursor--blink" aria-hidden="true">|</span>
+            </h1>
+        </section>
+
         <!-- Contact Section -->
         <section class="contact">
             <h2>Contact</h2>
@@ -37,7 +45,7 @@
 
         <!-- About Section -->
         <section id="about" class="resume-section">
-            <h2>About Me</h2>
+            <h2>Evan Shiber</h2>
             <p>Cybersecurity student passionate about protecting systems from threats.</p>
         </section>
 
