--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
     </header>
     <main>
         <!-- Blinking Cursor Section -->
-        <section class="hero--section">
-            <h1 class="hero--section--title">
-                <span></span>
-                <span class="typed-cursor typed-cursor--blink" aria-hidden="true">|</span>
-            </h1>
-        </section>
+        <section id="hero-section">
+            <div class="hero--section">
+                <h2 class="hero--section--title">
+                    <span></span>
+                    <span class="typed-cursor--blink">|</span>
+                </h2>
+            </div>
+        </section>                   
 
         <!-- Contact Section -->
         <section class="contact">
