--- a/index.html
+++ b/index.html
@@ -15,15 +15,20 @@
         <img src="images/SelfPicture.jpg" alt="A description of the image" class="header-image">
     </header>
     <main>
-        <!-- Blinking Cursor Section -->
-        <section id="hero-section">
-            <div class="hero--section">
-                <h2 class="hero--section--title">
-                    <span></span>
-                    <span class="typed-cursor--blink">|</span>
-                </h2>
+
+        <section id="About-Me" class="full-screen-section">
+            <div class="container about-container">
+                <img src="images/SelfPicture.jpg" alt="Profile Photo" class="profile-photo">
+                <div class="about-text">
+                    <h1>Evan Shiber</h1>
+                    <h1 class="hero--section--title">
+                        <span></span>
+                        <span class="typed-cursor typed-cursor--blink" aria-hidden="true">|</span>
+                    </h1>
+                    <p>Cybersecurity student passionate about protecting systems from threats.</p>
+                </div>
             </div>
-        </section>                   
+        </section>        
 
         <!-- Contact Section -->
         <section class="contact">
