--- a/index.html
+++ b/index.html
@@ -9,20 +9,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-     <section id="About-Me" class="full-screen-section">
-          <div class="container about-container">
-              <img src="images/SelfPicture.jpg" alt="Profile Photo" class="profile-photo">
-              <div class="about-text">
-                   <h1>Evan Shiber</h1>
-                   <h1 class="hero--section--title">
-                     <span></span>
-                     <span class="typed-cursor typed-cursor--blink" aria-hidden="true">|</span>
-                 </h1>
-                 <p>Cybersecurity student passionate about protecting systems from threats.</p>
-             </div>
-         </div>
-    </section>        
-
+    <header>
+        <h1>Evan Shiber</h1>
+        <p>Cyber Security Engineer</p>
+        <img src="images/SelfPicture.jpg" alt="A description of the image" class="header-image">
+    </header>
+    <main>
         <!-- Contact Section -->
         <section class="contact">
             <h2>Contact</h2>
