updated projects and about to personal info

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <span></span>
                     <span class="typed-cursor typed-cursor--blink" aria-hidden="true">|</span>
                 </h1>
-                <p>Cyber Security Engineering student at Iowa State University.</p>
+                <p>Cybersecurity student passionate about protecting systems from threats.</p>
             </div>
         </div>
     </section>
@@ -39,12 +39,12 @@
             <h2>Technical Skills</h2>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Languages:</strong><br>  Java <br> JavaScript <br> Python<br> C/C++<br> HTML<br> CSS<br> SQL
+                    <strong>Security:</strong><br>  Java <br> JavaScript <br> Python<br> C/C++<br> HTML<br> CSS<br> SQL
                 </div>
             </div>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Frameworks:</strong><br>  React<br>  Node.js<br>  Express<br>  Bootstrap<br>  Tailwind
+                    <strong>Software:</strong><br>  React<br>  Node.js<br>  Express<br>  Bootstrap<br>  Tailwind
                 </div>
             </div>
             <div class="skills">
@@ -66,12 +66,12 @@
             <div class="project">
                 <img src="https://via.placeholder.com/200" alt="Project 1" height="200" width="200">
                 <h3>Mobile App</h3>
-                <p>MusiQuest is an android application created using Java consisting of multiple activity pages, and several operations communicating with the server and database which was created by my team and I. MusiQuest is an application intended for use of those teaching, or learning music theory in the form of a quiz-style game. MusiQuest has multiple WebSocket features such as a global chat, friends list, and a global leaderboard per level. If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
+                <p>Students can see course descriptions, register for courses, and leave reviews/ratings for taken courses/professors. Employed WebSocket for real-time chat between students and advisors, along with advisors and administrators. Implemented user authentication for Privileged Access Management for Admin, Advisor, and Student user types. If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
             </div>
             <div class="project">
                 <img src="https://via.placeholder.com/200" alt="Project 2" height="200" width="200">
                 <h3>Web App</h3>
-                <p>Lusiant is a webapp created using JavaScript, HTML and CSS. This site is a user-friendly, interactive ecommerce store for a clothing brand created by a childhood friend. This webapp is powered by a MongoDB database, and React for the frontend. Lusiant utilizes both tailwind and bootstrap CSS libraries for icons, and the building blocks of the catalog section of the site. This site also feature an administrator lock to shut down the site between productions of Lusiant products. Lusiant also contains a contact and payment form that uses autofill and saves information for repeat customers. If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
+                <p>Created and employed a Finite State Machine (FSM), a 16-bit binary counter, a register file, a ripple-carry adder, multiple seven-segment displays, and user-controlled inputs on an Altera DE2-115 Cyclone IV FPGA. If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
             </div>
             <div class="project">
                 <img src="https://via.placeholder.com/200" alt="Project 3" height="200" width="200">
