--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <section id="About-Me" class="full-screen-section">
         <div class="container about-container">
-            <img src="images\SelfPicture.jpg" alt="Profile Photo" class="profile-photo">
+            <img src="images\SelfPicture.png" alt="Profile Photo" class="profile-photo">
             <div class="about-text">
                 <h1>Evan Shiber</h1>
                 <h2 class="hero--section--title">
