First commit today, updated skill to inlcude kali linux

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h2>Technical Skills</h2>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Security:</strong><br>  Java <br> JavaScript <br> Python<br> C/C++<br> HTML<br> CSS<br> SQL
+                    <strong>Security:</strong><br>  Kali Linux <br> JavaScript <br> Python<br> C/C++<br> HTML<br> CSS<br> SQL
                 </div>
             </div>
             <div class="skills">
