finished skills section text

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Other:</strong><br>   AI Prompting<br>  SIEM<br>  MITRE ATT&CK<br>   Cryptography<br>  Mongoose<br>  MongoDB
+                    <strong>Other:</strong><br>   AI Prompting<br>  SIEM<br>  MITRE ATT&CK<br>   Cryptography
                 </div>
             </div>
         </div>
