fixed html spacing for skills section

--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
             <h2>Technical Skills</h2>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Security:</strong><br>  Kali Linux <br> Pen-Testing <br> Wireshark<br> Nmap<br> pfSense<br> IDS/IPS<br> SQL
+                    <strong>Security:</strong><br> Kali Linux <br> Pen-Testing <br> Wireshark<br> Nmap<br> pfSense<br> IDS/IPS
                 </div>
             </div>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Software:</strong><br>  Java<br>  Python<br>  SQL<br>  MIPS Assembly<br>  LaTeX
+                    <strong>Software:</strong><br> Java<br> Python<br> SQL<br> MIPS Assembly<br> LaTeX
                 </div>
             </div>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Developer Tools:</strong><br>  Git<br>  Postman API<br>  CI/CD<br>  VS Code<br>  Quartus Prime<br>  Eclipse
+                    <strong>Developer Tools:</strong><br> Git<br> Postman API<br> CI/CD<br> VS Code<br> Quartus Prime<br> Eclipse
                 </div>
             </div>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Other:</strong><br>   AI Prompting<br>  SIEM<br>  MITRE ATT&CK<br>   Cryptography
+                    <strong>Other:</strong><br> AI Prompting<br> SIEM<br> MITRE ATT&CK<br> Cryptography
                 </div>
             </div>
         </div>
