added computer hardware skill in other section

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Other:</strong><br> AI Prompting<br> SIEM<br> MITRE ATT&CK<br> Cryptography
+                    <strong>Other:</strong><br> AI Prompting<br> SIEM<br> MITRE ATT&CK<br> Cryptography <br> Computer Hardware
                 </div>
             </div>
             <div class="skills">
