added <br> o project sections

--- a/index.html
+++ b/index.html
@@ -66,17 +66,23 @@
             <div class="project">
                 <img src="https://via.placeholder.com/200" alt="Project 1" height="200" width="200">
                 <h3>Student Schedule Android App</h3>
-                <p>Students can see course descriptions, register for courses, and leave reviews/ratings for taken courses/professors. Employed WebSocket for real-time chat between students and advisors, along with advisors and administrators. Implemented user authentication for Privileged Access Management for Admin, Advisor, and Student user types. If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
+                <p>Students can see course descriptions, register for courses, and leave reviews/ratings for taken courses/professors.<br> 
+                    Employed WebSocket for real-time chat between students and advisors, along with advisors and administrators.<br>
+                    Implemented user authentication for Privileged Access Management for Admin, Advisor, and Student user types. <br>
+                    If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
             </div>
             <div class="project">
                 <img src="https://via.placeholder.com/200" alt="Project 2" height="200" width="200">
                 <h3>Digital Logic Circuit</h3>
-                <p>Created and employed a Finite State Machine (FSM), a 16-bit binary counter, a register file, a ripple-carry adder, multiple seven-segment displays, and user-controlled inputs on an Altera DE2-115 Cyclone IV FPGA. If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
+                <p>Created and employed a Finite State Machine (FSM), a 16-bit binary counter, a register file, a ripple-carry adder, multiple seven-segment displays, and user-controlled inputs on an Altera DE2-115 Cyclone IV FPGA. <br>
+                    If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
             </div>
             <div class="project">
                 <img src="https://via.placeholder.com/200" alt="Project 3" height="200" width="200">
                 <h3>Placeholder Project</h3>
-                <p>This is a placeholder for a future project. Details about this project will be added soon. If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
+                <p>This is a placeholder for a future project. <br>
+                    Details about this project will be added soon. <br>
+                    If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
             </div>
         </div>
     </section>
