implemented java icon from fontavesome to bottom of project 1 section

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     Employed WebSocket for real-time chat between students and advisors, along with advisors and administrators.<br>
                     Implemented user authentication for Privileged Access Management for Admin, Advisor, and Student user types. <br>
                     If you'd like to learn more about this project, click <em><a href="#">here.</a></em></p>
+                    <i class="fa-brands fa-java"></i> <!-- Added Java icon here -->
             </div>
             <div class="project">
                 <img src="https://via.placeholder.com/200" alt="Project 2" height="200" width="200">
