--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="skills">
                 <div class="skill-category">
-                    <strong>Software:</strong><br> Java<br> Python<br> C/C++<br> SQL<br> MIPS Assembly<br> LaTeX
+                    <strong>Software:</strong><br> Java<br> Python<br> C/C++<br> SQL<br> MIPS Assembly<br> HTML/CSS
                 </div>
             </div>
             <div class="skills">
