--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <div class="icons">
                     <i class="fa-brands fa-java"></i> <!-- Java Icon -->
                     <i class="fa-brands fa-git-alt"></i> <!-- Git Icon -->
+                    <img src="images/CICD_icon.png" alt="CI/CD Icon" class="CI/CD Icon">
                 </div>
                 <p>Students can see course descriptions, register for courses, and leave reviews/ratings for taken courses/professors.<br> 
                     Employed WebSocket for real-time chat between students and advisors, along with advisors and administrators.<br>
